// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormAdditionalFiles component default 1`] = `
<div
  class="form-additional-files"
>
  <form-header-stub
    class="form-additional-files__header"
    title="Files Upload"
  />
   
  <div
    class="form-additional-files__field"
  >
    <div
      action=""
      drag=""
      on-change="function () { [native code] }"
    >
      <div
        class="form-additional-files__field_empty"
      >
        <div
          class="form-additional-files__field-icon required"
        />
         
        <div
          class="form-additional-files__field-title"
        >
          
                    Upload Your CV
                
        </div>
         
        <div
          class="form-additional-files__field-subtitle"
        >
          <span>
            Drag and drop or Upload your CV file
          </span>
           
          <span
            class="form-additional-files__field-upload-link"
          >
            
                        here
                    
          </span>
        </div>
      </div>
    </div>
  </div>
   
  <div
    class="form-additional-files__field"
  >
    <div
      action=""
      drag=""
      on-change="function () { [native code] }"
    >
      <div
        class="form-additional-files__field_empty"
      >
        <div
          class="form-additional-files__field-icon"
        />
         
        <div
          class="form-additional-files__field-title"
        >
          
                    Upload Your Cover Letter
                
        </div>
         
        <div
          class="form-additional-files__field-subtitle"
        >
          <span>
            Drag and frop or Upload your Cover Letter file
          </span>
           
          <span
            class="form-additional-files__field-upload-link"
          >
            
                        here
                    
          </span>
        </div>
      </div>
    </div>
  </div>
   
  <div
    class="form-additional-files__actions"
  >
    <div
      text="NEXT"
      width="115"
    />
  </div>
</div>
`;

exports[`FormAdditionalFiles component uploaded cover letter 1`] = `
<div
  class="form-additional-files"
>
  <form-header-stub
    class="form-additional-files__header"
    title="Files Upload"
  />
   
  <div
    class="form-additional-files__field"
  >
    <div
      action=""
      drag=""
      on-change="function () { [native code] }"
    >
      <div
        class="form-additional-files__field_empty"
      >
        <div
          class="form-additional-files__field-icon required"
        />
         
        <div
          class="form-additional-files__field-title"
        >
          
                    Upload Your CV
                
        </div>
         
        <div
          class="form-additional-files__field-subtitle"
        >
          <span>
            Drag and drop or Upload your CV file
          </span>
           
          <span
            class="form-additional-files__field-upload-link"
          >
            
                        here
                    
          </span>
        </div>
      </div>
    </div>
  </div>
   
  <div
    class="form-additional-files__field"
  >
    <div
      action=""
      drag=""
      on-change="function () { [native code] }"
    >
      <div
        class="form-additional-files__field_uploaded"
      >
        <div
          class="form-additional-files__field-title-wrapper"
        >
          <div
            class="form-additional-files__field-icon"
          />
           
          <div
            class="form-additional-files__field-title"
            title="Test file name.pdf"
          >
            
                        Test file name.pdf
                    
          </div>
        </div>
         
        <div
          class="form-additional-files__field-subtitle"
        >
          <span>
            Reupload a new file
          </span>
           
          <span
            class="form-additional-files__field-upload-link"
          >
            
                        here
                    
          </span>
        </div>
      </div>
    </div>
  </div>
   
  <div
    class="form-additional-files__actions"
  >
    <div
      text="NEXT"
      width="115"
    />
  </div>
</div>
`;

exports[`FormAdditionalFiles component uploaded cv 1`] = `
<div
  class="form-additional-files"
>
  <form-header-stub
    class="form-additional-files__header"
    title="Files Upload"
  />
   
  <div
    class="form-additional-files__field"
  >
    <div
      action=""
      drag=""
      on-change="function () { [native code] }"
    >
      <div
        class="form-additional-files__field_uploaded"
      >
        <div
          class="form-additional-files__field-title-wrapper"
        >
          <div
            class="form-additional-files__field-icon"
          />
           
          <div
            class="form-additional-files__field-title"
            title="Test file name.pdf"
          >
            
                        Test file name.pdf
                    
          </div>
        </div>
         
        <div
          class="form-additional-files__field-subtitle"
        >
          <span>
            Reupload a new file
          </span>
           
          <span
            class="form-additional-files__field-upload-link"
          >
            
                        here
                    
          </span>
        </div>
      </div>
    </div>
  </div>
   
  <div
    class="form-additional-files__field"
  >
    <div
      action=""
      drag=""
      on-change="function () { [native code] }"
    >
      <div
        class="form-additional-files__field_empty"
      >
        <div
          class="form-additional-files__field-icon"
        />
         
        <div
          class="form-additional-files__field-title"
        >
          
                    Upload Your Cover Letter
                
        </div>
         
        <div
          class="form-additional-files__field-subtitle"
        >
          <span>
            Drag and frop or Upload your Cover Letter file
          </span>
           
          <span
            class="form-additional-files__field-upload-link"
          >
            
                        here
                    
          </span>
        </div>
      </div>
    </div>
  </div>
   
  <div
    class="form-additional-files__actions"
  >
    <div
      text="NEXT"
      width="115"
    />
  </div>
</div>
`;
